<resources>
    <string name="app_name">HeyBook</string>

    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>

    <string name="action_settings">Ayarlar</string>
    <string name="title_activity_vitrin">Heybook! Vitrin</string>
    <string name="vitrin_kitaplar">Kitap Listesi</string>
    <string name="title_activity_single_book">SingleBook</string>
    <string name="listen">Kitabı Dinle</string>
    <string name="hintName">Kullanıcı Adı</string>
    <string name="hintPassword">Parola</string>
    <string name="login">Giriş Yap</string>
    <string name="title_activity_listen">Listen</string>
    <string name="back"><![CDATA[<]]></string>
    <string name="rewind"><![CDATA[<<]]></string>
    <string name="forward"><![CDATA[>>]]></string>
    <string name="pause">||</string>
    <string name="srch">Kitap Ara</string>
    <string name="title_activity_search_result">SearchResult</string>
    <string name="add_favorites">Favorilere Ekle</string>
    <string name="buy">Satın Al</string>
    <string name="title_activity_register">Kayıt Ol</string>
    <string name="register">Kayıt Ol</string>
    <string name="register_button">Kayıt Ol</string>
    <string name="add_to_chart">Sepete Ekle</string>
    <string name="summary">Özet</string>
    <string name="title_activity_logout">Çıkış Yap</string>
    <string name="already_login">Zaten bir hesabın var mı? Giriş yap</string>
    <string name="title_activity_settings">Ayarlar</string>
    <string name="save_settings">Bilgileri Kaydet</string>
    <string name="abone">EPOSTA BÜLTENİNE ABONE OL</string>
    <string name="sighted_mode">GÖRME ENGELLİ MODU</string>
    <string name="updateProfile">Güncelle</string>
    <string name="giris_yap">Giriş Yap</string>
    <string name="forget_password">Parolamı unuttum</string>
    <string name="favorilere_ekle">Favorilere Ekle</string>
    <string name="title_activity_category">Category</string>
    <string name="category">Kategoriler</string>
    <string name="title_activity_favorites">Favorites</string>
    <string name="last_listened">SON EKLENENLER</string>
    <string name="kisisel_gelisim">KİŞİSEL GELİŞİM</string>
    <string name="favoriler">Favoriler</string>
    <string name="title_activity_sepet">Sepet</string>
    <string name="title_activity_search">SearchActivity</string>
    <string name="arama">HeyBook\'ta Ara</string>
    <string name="search_button">Arama Yap</string>
    <string name="title_activity_odeme">Odeme</string>
    <string name="sepet">SEPET</string>
    <string name="odeme_user_info">KART ÜZERİNDEKİ İSİM VE SOYİSİM</string>
    <string name="card_number">KART NUMARASI</string>
    <string name="son_kullanma">SON KULLANMA TARİHİ</string>
    <string name="cvc_number">CVC2 NUMARASI</string>
    <string name="odemeyi_onayla">ÖDEMEYİ ONAYLA</string>
    <string name="security_onay_message">Lütfen kredi kartınıza tanımlı olan cep telefonunuza gelen tek kullanımlık şifreyi girin.</string>
    <string name="sec">3D TEK KULLANIMLIK ŞİFRE</string>
    <string name="aprove">3D ONAY</string>
    <string name="title_activity_user_books">UserBooks</string>
    <string name="kitaplarima_git">KİTAPLARIMA GİT</string>
</resources>
